--- a/docker/Dockerfile-app
+++ b/docker/Dockerfile-app
@@ -7,13 +7,13 @@ RUN npm install -g http-server
 WORKDIR /app
 
 # copy both 'package.json' and 'package-lock.json' (if available)
-COPY ../pogona_hunter ./
+COPY ./pogona_hunter/package.json ./
 
 # install project dependencies
 RUN npm install
 
 # copy project files and folders to the current working directory (i.e. 'app' folder)
-COPY ../pogona_hunter .
+COPY ./pogona_hunter .
 
 # build app for production with minification
 RUN npm run build
