--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -77,6 +77,9 @@ RUN pip3 install -r arena.txt
 COPY ./Arena .
 RUN pip3 install spinnaker_python-2.0.0.147-cp37-cp37m-linux_x86_64.whl
 
+RUN apt-get install lsb-release \
+libusb-1.0.0
+
 RUN dpkg -i spinnaker-2.0.0.147-amd64/libspinnaker_*.deb
 RUN dpkg -i spinnaker-2.0.0.147-amd64/libspinnaker-dev_*.deb
 RUN dpkg -i spinnaker-2.0.0.147-amd64/libspinnaker-c_*.deb
