--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -72,12 +72,11 @@ RUN mkdir /arena
 WORKDIR /arena
 
 COPY ./requirements/arena.txt .
-RUN pip3 install -r arena.txt
+COPY ./Arena .
 
 RUN apt-get -qq update && apt-get -qq install -y lsb-release \
   libusb-1.0.0
 
-COPY ./Arena .
+RUN pip3 install -r arena.txt
 RUN pip3 install spinnaker/spinnaker_python-2.0.0.147-cp36-cp36m-linux_x86_64.whl
-
-RUN cd spinnaker && ./install_spinnaker.sh
+RUN cd spinnaker && (echo "yes" && cat) | ./install_spinnaker.sh
