--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     container_name: arena
     privileged: true
     volumes:
-    - ./Arena:/arena
+    - ../Arena:/arena
 #    restart: always
     command: "flask run --host=0.0.0.0"
     ports:
