--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -80,3 +80,5 @@ RUN apt-get -qq update && apt-get -qq install -y lsb-release \
 RUN pip3 install -r arena.txt
 RUN pip3 install spinnaker/spinnaker_python-2.0.0.147-cp36-cp36m-linux_x86_64.whl
 RUN cd spinnaker && (echo "yes" && cat) | ./install_spinnaker.sh
+
+RUN echo 'alias python="python3"' >> ~/.bashrc
