--- a/pogona_hunter/package.json
+++ b/pogona_hunter/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "amqplib": "^0.5.6",
     "vue": "^2.5.2",
+    "vue-burger-menu": "^2.0.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
