--- a/pogona_hunter/package.json
+++ b/pogona_hunter/package.json
@@ -15,6 +15,7 @@
     "amqplib": "^0.5.6",
     "vue": "^2.5.2",
     "vue-burger-menu": "^2.0.5",
+    "vue-mqtt": "^2.0.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
