--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -28,17 +28,31 @@ services:
     ports:
      - 8080:8080
 
-  mosquitto:
+  logger:
+    build:
+      context: ..
+      dockerfile: ./docker/Dockerfile-logger
+    container_name: logger
+    restart: always
+    command: 'python mqtt.py'
+    volumes:
+      - ../Arena:/logger
+    environment:
+      - PYTHONUNBUFFERED=1
+
+  mqtt:
     image: eclipse-mosquitto:1.6
     restart: always
+    container_name: mqtt
     ports:
       - 1883:1883
       - 0.0.0.0:9001:9001
     volumes:
       - ../mosquitto/:/mosquitto/config/
 
-  redis:
+  cache:
     image: redis
+    container_name: cache
     restart: always
 
 #  rabbitmq:
