--- a/pogona_hunter/src/config.json
+++ b/pogona_hunter/src/config.json
@@ -7,7 +7,8 @@
       "radiusRange": {
         "min": 140,
         "max": 160
-      }
+      },
+      "stepsPerImage": 10
     },
     "worm": {
       "text": "Worm",
@@ -16,7 +17,8 @@
       "radiusRange": {
         "min": 220,
         "max": 240
-      }
+      },
+      "stepsPerImage": 10
     },
     "vegetables": {
       "text": "Vegetables",
@@ -26,7 +28,18 @@
       "radiusRange": {
         "min": 250,
         "max": 300
-      }
+      },
+      "stepsPerImage": 10
+    },
+    "red_beetle": {
+      "text": "Red Beetle",
+      "numImagesPerBug": 12,
+      "speed": 3,
+      "radiusRange": {
+        "min": 150,
+        "max": 180
+      },
+      "stepsPerImage": 4
     }
   },
   "movementTypes": [
