--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2.3'
 
 services:
   arena:
@@ -11,6 +11,7 @@ services:
     - ../Arena:/arena
     - ../pogona_hunter:/pogona_hunter
     restart: always
+    runtime: nvidia
     command: "flask run --host=0.0.0.0"
     ports:
       - 3350:8888
