--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       - FLASK_APP=api.py
       - LC_ALL=C.UTF-8
       - LANG=C.UTF-8
+      - PYTHONUNBUFFERED=1
 
   app:
     build:
