--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -40,6 +40,8 @@ services:
     container_name: logger
     restart: always
     command: 'python mqtt.py'
+    devices:
+      - /dev/parport0
     volumes:
       - ../Arena:/logger
     environment:
