--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -7,6 +7,10 @@ services:
       dockerfile: ./docker/Dockerfile-arena
     container_name: arena
     privileged: true
+    depends_on:
+      - cache
+      - mqtt
+      - logger
     volumes:
     - ../Arena:/arena
     - ../pogona_hunter:/pogona_hunter
@@ -27,6 +31,8 @@ services:
       context: ..
       dockerfile: ./docker/Dockerfile-app
     container_name: pogona_hunter
+    depends_on:
+      - mqtt
     restart: always
     volumes:
     - ../pogona_hunter:/app
@@ -38,6 +44,9 @@ services:
       context: ..
       dockerfile: ./docker/Dockerfile-logger
     container_name: logger
+    depends_on:
+      - mqtt
+      - cache
     restart: always
     command: 'python mqtt.py'
     devices:
