--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,12 @@
 Arena/experiments/*
 Arena/events/*
 Arena/output/*
+docker/*
+**/*.jpg
+**/*.png
+**/*.csv
+**/*.avi
+**/*.mp4
+!pogona_hunter/**/*.jpg
+!Arena/static/*.jpg
+!pogona_hunter/**/*.png
