--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -50,23 +50,26 @@ services:
       - mqtt
       - cache
     restart: always
-    command: 'python mqtt.py'
+    command: 'celery -A logger worker --loglevel=INFO'
     devices:
-      - /dev/parport0
+      - ${PARPORT_DEVICE-/dev/parport0}
     volumes:
       - ../Arena:/logger
     environment:
       - PYTHONUNBUFFERED=1
+      - IS_USE_PARPORT=1
 
   mqtt:
-    image: eclipse-mosquitto:1.6
+    build:
+      context: ..
+      dockerfile: ./docker/Dockerfile-mqtt
     restart: always
     container_name: mqtt
+    environment:
+      - PYTHONUNBUFFERED=1
     ports:
       - 1883:1883
       - 0.0.0.0:9001:9001
-    volumes:
-      - ../mosquitto/:/mosquitto/config/
 
   cache:
     image: redis
