--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -8,7 +8,7 @@ pid_file /var/run/mosquitto.pid
 persistence true
 persistence_location /var/lib/mosquitto/
 
-log_dest file /mosquitto/mosquitto.log
+# log_dest file /var/log/mosquitto.log
 
 listener 1883
 
