--- a/docker/Dockerfile-logger
+++ b/docker/Dockerfile-logger
@@ -3,7 +3,7 @@ FROM python:3.6
 RUN mkdir /logger
 WORKDIR /logger
 
-COPY ./requirements/arena.txt .
+COPY ./requirements .
 
 RUN pip install -r arena.txt
 
