--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -25,7 +25,7 @@ apt-get -qq install -y \
   libatlas-base-dev \
   gfortran \
   libhdf5-dev \
-  python3.7-dev && \
+  python3.7-dev \
   python3-pip && \
 pip3 install --upgrade pip && \
 pip3 install numpy && \
