--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -28,7 +28,7 @@ apt-get -qq install -y \
   python3.7-dev
 
 RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 1
-RUN apt-get install python3-pip && \
+RUN apt-get -qq install -y python3-pip && \
 pip3 install --upgrade pip && \
 pip3 install numpy && \
 apt-get autoclean && apt-get clean && \
