--- a/pogona_hunter/package.json
+++ b/pogona_hunter/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-burger-menu": "^2.0.5",
+    "vue-frame-video": "^1.1.3",
     "vue-mqtt": "^2.0.3",
     "vuex": "^3.4.0"
   },
