new docker with predictor.txt

--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -149,6 +149,7 @@ RUN apt-get -qq update && apt-get -qq install -y lsb-release \
   libusb-1.0.0
 
 RUN pip3 install -r arena.txt
+RUN pip3 install -r predictor.txt
 RUN pip3 install spinnaker/spinnaker_python-2.2.0.48-cp37-cp37m-linux_x86_64.whl
 RUN cd spinnaker && (echo "yes" && cat) | ./install_spinnaker.sh
 
