--- a/docker/Dockerfile-pose
+++ b/docker/Dockerfile-pose
@@ -4,6 +4,7 @@ USER root
 
 ENV TZ=Asia/Jerusalem
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN mkdir /data
 
 COPY ./requirements .
 RUN pip install -r pose.txt
