new deployments flow

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     build:
       context: ..
       dockerfile: ./docker/Dockerfile-arena
+    image: pogona_arena:${arena_tag-latest}
     container_name: arena
     privileged: true
     depends_on:
@@ -32,6 +33,7 @@ services:
     build:
       context: ..
       dockerfile: ./docker/Dockerfile-app
+    image: pogona_app:${app_tag-latest}
     container_name: pogona_hunter
     depends_on:
       - mqtt
@@ -46,6 +48,7 @@ services:
     build:
       context: ..
       dockerfile: ./docker/Dockerfile-logger
+    image: pogona_logger:${logger_tag-latest}
     container_name: logger
     depends_on:
       - mqtt
@@ -64,6 +67,7 @@ services:
     build:
       context: ..
       dockerfile: ./docker/Dockerfile-explore
+    image: pogona_explore:${explore_tag-latest}
     container_name: explore
     command: 'flask run --host=0.0.0.0'
     ports:
@@ -93,6 +97,7 @@ services:
       context: ..
       dockerfile: ./docker/Dockerfile-mqtt
     restart: always
+    image: pogona_mqtt:${mqtt_tag-latest}
     container_name: mqtt
     environment:
       - PYTHONUNBUFFERED=1
