--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -25,7 +25,8 @@ apt-get -qq install -y \
   libatlas-base-dev \
   gfortran \
   libhdf5-dev \
-  python3.7-dev
+  python3.7-dev \
+  python3-tk
 
 RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 1
 RUN apt-get -qq install -y python3-pip && \
@@ -149,6 +150,9 @@ RUN apt-get -qq update && apt-get -qq install -y lsb-release \
   libusb-1.0.0
 
 RUN pip3 install -r arena.txt
+# Installation of deeplabcut-live
+RUN pip3 install --no-deps deeplabcut-live colorcet
+# Spinnaker
 RUN pip3 install spinnaker/spinnaker_python-2.0.0.147-cp37-cp37m-linux_x86_64.whl
 RUN cd spinnaker && (echo "yes" && cat) | ./install_spinnaker.sh
 
