--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -2,6 +2,7 @@ FROM ubuntu:18.04
 # Built using PyImageSearch guide:
 # http://www.pyimagesearch.com/2015/06/22/install-opencv-3-0-and-python-2-7-on-ubuntu/
 
+ARG DEBIAN_FRONTEND=noninteractive
 # Install dependencies
 RUN apt-get -qq update && apt-get -qq upgrade -y && apt-get -qq install -y \
   wget \
