--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -3,7 +3,8 @@
 # A full description of the configuration file is at
 # /usr/share/doc/mosquitto/examples/mosquitto.conf.example
 
-pid_file /var/run/mosquitto.pid
+allow_anonymous true
+pid_file /var/run/mosquitto/mosquitto.pid
 
 persistence true
 persistence_location /var/lib/mosquitto/
