--- a/pogona_hunter/src/config.json
+++ b/pogona_hunter/src/config.json
@@ -10,6 +10,16 @@
       },
       "stepsPerImage": 10
     },
+    "leaf": {
+      "text": "Leaf",
+      "numImagesPerBug": 8,
+      "speed": 0,
+      "radiusRange": {
+        "min": 140,
+        "max": 160
+      },
+      "stepsPerImage": 10
+    },
     "worm": {
       "text": "Worm",
       "numImagesPerBug": 5,
@@ -86,6 +96,8 @@
     "bottomRight": "Bottom Right"
   },
   "movementTypes": {
+    "static": "static",
+    "holes": "holes",
     "random": "random walk",
     "circle": "circle",
     "low_horizontal": "low horizontal",
