--- a/pogona_hunter/package.json
+++ b/pogona_hunter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pogona_hunter",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "Behavioral application for lizards",
   "author": "Regev Eyal <regevti@gmail.com>",
   "private": true,
   "scripts": {
@@ -12,10 +12,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "redis": "^4.2.0",
     "vue": "^2.5.2",
     "vue-burger-menu": "^2.0.5",
     "vue-mqtt": "^2.0.3",
-    "vuex": "^3.4.0"
+    "vue-simple-websocket": "0.0.3",
+    "vuex": "^3.4.0",
+    "ws": "~8.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -26,8 +29,8 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -53,7 +56,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "shelljs": "^0.8.5",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
