--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -13,5 +13,5 @@ persistence_location /var/lib/mosquitto/
 
 listener 1883
 
-listener 9001 0.0.0.0
-protocol websockets
+# listener 9001 0.0.0.0
+# protocol websockets
