--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -83,17 +83,17 @@ services:
 #      - LC_ALL=C.UTF-8
 #      - LANG=C.UTF-8
 
-#  mqtt:
-#    build:
-#      context: ..
-#      dockerfile: ./docker/Dockerfile-mqtt
-#    restart: "unless-stopped"
-#    image: pogona_mqtt:${mqtt_tag-latest}
-#    container_name: mqtt
-#    environment:
-#      - PYTHONUNBUFFERED=1
-#    ports:
-#      - 1883:1883
+  mqtt:
+    build:
+      context: ..
+      dockerfile: ./docker/Dockerfile-mqtt
+    restart: "unless-stopped"
+    image: pogona_mqtt:${mqtt_tag-latest}
+    container_name: mqtt
+    environment:
+      - PYTHONUNBUFFERED=1
+    ports:
+      - 1883:1883
 #      - 0.0.0.0:9001:9001
 
   cache:
