--- a/pogona_hunter/package.json
+++ b/pogona_hunter/package.json
@@ -12,14 +12,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@vue/cli-plugin-unit-jest": "^5.0.8",
-    "@vue/test-utils": "^2.2.10",
     "redis": "^4.2.0",
     "uuid": "^9.0.0",
     "vue": "^2.5.2",
     "vue-burger-menu": "^2.0.5",
-    "vue-cli": "^2.9.6",
     "vue-mqtt": "^2.0.3",
+    "vue-router": "^3.6.5",
     "vue-simple-websocket": "0.0.3",
     "vuex": "^3.4.0",
     "ws": "~8.8.1"
@@ -51,7 +49,6 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^29.4.2",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
