--- a/pogona_hunter/src/config.json
+++ b/pogona_hunter/src/config.json
@@ -104,7 +104,12 @@
     "half_circle": "half circle",
     "low_horizontal": "low horizontal",
     "low_horizontal_noise": "low horizontal + noise",
-    "jump_up": "jump up"
+    "jump_up": "jump up",
+    "rect_tunnel": "rect tunnel"
+  },
+  "boards": {
+    "holes": ["random", "random_speeds", "circle", "low_horizontal", "low_horizontal_noise", "jump_up"],
+    "tunnel": ["rect_tunnel"]
   },
   "targetDrifts": {
     "leftBottom": {
